# vosk-wrapper-1000-py

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  ASYNC_HOOKS.md  QUICKSTART.md  README.md  audio_backend.py  audio_processor.py  audio_system.py  cert.pem  device_manager.py  download_model.py  hook_manager.py  key.pem  main.py  main_original.py  main_refactored.py  model_manager.py  on_stop.sh  pid_manager.py  pyproject.toml  requirements.txt  run.sh  signal_manager.py  test_audio.py  test_audio_debug.py  test_callback.py  test_callback_simple.py  test_comprehensive.py  test_direct.py  test_full_flow.py  test_hook_async.py  test_main_flow.py  test_manual.sh  test_signals.py  test_tui_screenshot.py  test_workflow.sh  xdg_paths.py
.claude/: PLAN.md
.github/workflows/: tests.yml
Formula/: vosk-wrapper-1000.rb
config/: default.yaml
docs/: AUDIO_PROCESSING.md  CHANGELOG_IPC.md  CONFIGURATION.md  HOMEBREW.md  IPC_FIX.md  IPC_PROTOCOL.md  IPC_USAGE.md  PROPOSAL_INPUT_GATE.md  SETTINGS_TUI.md  SYSTEMD_SERVICE.md  WEBRTC.md  dep_crc32c.md
examples/webrtc/: README.md  cert.pem  key.pem  serve_client.py  webrtc_client.html  webrtc_demo.py
hooks/: README.md
hooks/line/: 01_example.sh  01_trigger_words.py  01_trigger_words.sh  02_example.py  03_json_processor.sh  04_type_text.sh  05_notifications.py  06_advanced_notifications.py  07_webhook_notifications.py  NOTIFICATIONS_README.md  README.md  trigger_words_config.example.json
hooks/line/examples/: help_handler.sh  webhook_example.py
hooks/start/: 01_example.sh  02_json_logger.sh  02_persistent_notification.py  03_advanced_persistent_notification.py  PERSISTENT_NOTIFICATIONS_README.md
hooks/stop/: 00_debug.sh  01_example.sh  02_json_example.sh  02_persistent_notification.py  03_advanced_persistent_notification.py  03_clipboard.sh  03_pbcopy.sh  04_type_text.sh
scripts/: NOTIFICATION_MANAGER_README.md  diagnose_audio.py  enable-ipc.sh  fix-oom-issue.sh  fix_audio_config.py  fix_device.py  notification_manager.py  setup-systemd-service.sh  test_stream_creation.py
src/vosk_core/: __init__.py  audio_backend.py  audio_processor.py  backend_factory.py  download_model.py  model_manager.py  recognition_backend.py
src/vosk_core/backends/: __init__.py  faster_whisper_backend.py  vosk_backend.py  whisper_backend.py
src/vosk_simple/: __init__.py  audio_backend.py  audio_recorder.py  audio_system.py  config_manager.py  device_manager.py  download_model.py  main.py  model_manager.py  pid_manager.py
src/vosk_transcribe/: __init__.py  __main__.py  main.py
src/vosk_wrapper_1000/: __init__.py  audio_backend.py  audio_monitor.py  audio_processor.py  audio_recorder.py  audio_system.py  config_manager.py  device_manager.py  download_model.py  hook_manager.py  ipc_client.py  ipc_server.py  main.py  model_manager.py  pid_manager.py  settings_tui.py  signal_manager.py  webrtc_server.py  xdg_paths.py
systemd/: vosk-wrapper-1000-default.service  vosk-wrapper-1000@.service
tests/: README.md  conftest.py  test_audio.py  test_audio_speed.py  test_cli_entry_points.py  test_daemon_audio_capture.py  test_daemon_recording_fixed.sh  test_full_flow.py  test_resampler_fix.py  test_sample_rate_bug.py  test_sample_rate_diagnosis.py  test_signals.py  test_transcribe_e2e.py
tests/assets/: transcript_test_1_transcript.txt  transcript_test_2_with_background_noise_mono_48000hz_16bit_transcript.txt
tests/integration/: test_integration.py  test_transcribe.py
tests/unit/: test_audio_processor.py  test_cli_commands.py  test_config_manager.py  test_device_manager.py  test_hook_manager.py  test_ipc_server.py  test_model_manager.py  test_xdg_paths.py
