[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vosk-simple"
version = "0.1.0"
description = "A simple, robust, and configurable Python-based speech recognition service using Vosk"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "vosk==0.3.44",
    "sounddevice",
    "numpy",
    "scipy",
    "requests",
    "tqdm",
    "noisereduce",
    "soxr>=0.3.7",
    "PyYAML",
]

[project.scripts]
vosk-simple = "vosk_simple.main:main"
vosk-download-model = "vosk_simple.download_model:main"

[tool.hatch.build.targets.wheel]
only-include = [
    "src/vosk_simple",
]

[project.optional-dependencies]
pipewire = ["pipewire-python"]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-cov",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"tests/*" = ["E501", "F841"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["vosk_simple"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sounddevice.*",
    "vosk.*",
    "noisereduce.*",
    "soxr.*",
    "pipewire_python.*",
]
ignore_missing_imports = true
