[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vosk-wrapper-1000"
version = "0.1.0"
description = "Modular speech recognition toolkit with Vosk - includes daemon, file transcription, and core library"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "vosk==0.3.44",
    "sounddevice",
    "numpy",
    "scipy",
    "requests",
    "tqdm",
    "noisereduce",
    "soxr>=0.3.7",
    "PyYAML",
    "textual>=0.47.0",
    "aiortc>=1.6.0",
    "av>=10.0.0",
    "aiohttp>=3.8.0",
]

[project.scripts]
vosk-wrapper-1000 = "vosk_wrapper_1000.main:main"
vosk-download-model-1000 = "vosk_core.download_model:main"
vosk-transcribe-file = "vosk_transcribe.main:main"

[tool.hatch.build.targets.wheel]
only-include = [
    "src/vosk_core",
    "src/vosk_wrapper_1000",
    "src/vosk_transcribe",
]

[tool.hatch.build]
sources = ["src"]

[project.optional-dependencies]
pipewire = ["pipewire-python"]
faster-whisper = ["faster-whisper>=1.0.0"]
whisper = ["openai-whisper>=20231117"]
all-backends = [
    "faster-whisper>=1.0.0",
    "openai-whisper>=20231117",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "pytest-xdist>=3.6.1",
    "types-tqdm>=4.67.0.20250809",
    "scipy-stubs>=1.16.3.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "RUF012", # mutable class default
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "E402",  # module level import not at top of file (for sys.path manipulation)
    "E501",  # line too long in tests
    "F841",  # unused variable in tests
    "B007",  # unused loop control variable
]
"test_*.py" = [
    "E402",  # module level import not at top of file (for sys.path manipulation)
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["vosk_core", "vosk_wrapper_1000", "vosk_transcribe"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
exclude = [
    "hooks/",
    ".venv/",
    "venv/",
]

[[tool.mypy.overrides]]
module = [
    "sounddevice.*",
    "vosk.*",
    "noisereduce.*",
    "soxr.*",
    "pipewire_python.*",
    "vosk_core.*",
    "vosk_wrapper_1000.*",
    "vosk_transcribe.*",
]
ignore_missing_imports = true
